[package]
name = "todo_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tui = { version = "0.14", default-features = false, features = ["crossterm", "serde"] }
thiserror = "1.0"
